# rust_cli_for_cpp_lib

./: LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/include/: functions.h  types.h
cpp/src/: functions.cpp
rust/: Cargo.toml  build.rs
rust/src/: cli.rs  commands.rs  converting.rs  jsonParsing.rs  json_parsing.rs  main.rs  types.rs  wrapper.h
tests/sum/: first_data.txt  result.txt  second_data.txt
